--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -35,7 +35,7 @@
 <table class="table">
 
  <tr>  <th>дата рождения </th> <br> <th>{{name_student.date_of_birth }}</th></tr>
- <tr>  <th>адрес </th> <br> <th>{{name_student.adress }}</th></tr>
+ <tr>  <th>адрес </th> <br> <th>{{name_student.address }}</th></tr>
  <tr>  <th>почта </th> <br> <th>{{name_student.email }}</th></tr>
  <tr>  <th>skype </th> <br> <th>{{name_student.skype }}</th></tr>
  <tr>  <th>телефон </th> <br> <th>{{name_student.phone }}</th></tr>
