--- a/students/templates/students/list.html
+++ b/students/templates/students/list.html
@@ -41,7 +41,7 @@
 
 <td>{{i.id}}</td>
 <td><a href="{% url 'students:detail' i.id %}">{{i.name}} {{i.surname}}</a></td>
-<td>{{i.adress}}</td>
+<td>{{i.address}}</td>
 <td>{{i.skype}}</td>
 
 <td>
