--- a/courses/templates/courses/pyhon_course.html
+++ b/courses/templates/courses/pyhon_course.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'index.html' %}
 {% block python_course %}
     <div class="col s12">
         <h5 class="text-primarycolor">План курса</h5>
