--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>PyBursa - Students</title>
+<title>PyBursa - Coaches</title>
 <meta charset="utf-8">
 {% load staticfiles %}
-<link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet">
+<!--<link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet"> -->
 <link href="{% static 'css/cover.css' %}" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
@@ -32,32 +32,38 @@
 
 <div id="content_container">
   <div class="student-table">
-    <h1> {{ student_by_id.name }} {{ student_by_id.surname }}</h1>
+    <h1> {{ coach.full_name }}</h1>
     <table id="full-s">
       <tr>
         <td> дата рождения </td>
-        <td> {{ student_by_id.date_of_birth }} </td>
+        <td> {{ coach.date_of_birth }} </td>
       </tr>
       <tr>
         <td> адрес </td>
-        <td> {{ student_by_id.address }} </td>
+        <td> {{ coach.address }} </td>
       </tr>
       <tr>
         <td> email </td>
-        <td> {{ student_by_id.email }} </td>
+        <td> {{ coach.email }} </td>
       </tr>
       <tr>
         <td> skype </td>
-        <td> {{ student_by_id.skype }} </td>
+        <td> {{ coach.skype }} </td>
       </tr>
       <tr>
         <td> телефон </td>
-        <td> {{ student_by_id.phone }} </td>
+        <td> {{ coach.phone }} </td>
       </tr>
       <tr>
-        <td> курсы </td>
-        <td>  {% for s_courses in student_by_id.courses_id %}
-          <p><a href="{% url 'courses:detail' s_courses.id %}"> {{ s_courses }}</a></p>
+        <td> курсы учитель</td>
+        <td>  {% for course in coach.courses_coach %}
+          <p><a href="{% url 'courses:detail' course.id %}">{{ course }}</a> студенты курса <a href="{% url 'students:list_view' %}?course_id={{course.id}}"><span class=" glyphicon glyphicon-home"></span></a></p>
+          {% endfor %}</td>
+      </tr>
+      <tr>
+        <td> курсы ассистент</td>
+        <td>  {% for course in coach.courses_assistant %}
+          <p><a href="{% url 'courses:detail' course.id %}"> {{ course }}</a> студенты курса <a href="{% url 'students:list_view' %}?course_id={{course.id}}"><span class=" glyphicon glyphicon-home"></span></a></p>
           {% endfor %}</td>
       </tr>
     </table>
