--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>pyBursa | Main</title>
+<title>PyBursa - Courses</title>
 <meta charset="utf-8">
 {% load staticfiles %}
 <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet">
-<link href="{% static 'css/style.css' %}" rel="stylesheet">
+<link href="{% static 'css/cover.css' %}" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </head>
@@ -17,8 +17,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
     <a class="navbar-brand" href="http://pybursa.com/">
-    <img class="logo-minions" alt="Logo Pretty Minions" src="{% static 'images/logo.jpg' %}"></a>
-    </div>
+        </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
