--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -57,7 +57,7 @@
                   <div class="panel-body">
                     <table class="table table-bordered">
                           <th scope="row">дата рождения</th>
-                          <td>{{ student.date_of_birth }}</td>
+                          <td>{{ student.date_of_birth|date:"N d Y" }}</td>
                         </tr>
                         <tr>
                           <th scope="row">адрес</th>
