--- a/templates/index.html
+++ b/templates/index.html
@@ -153,7 +153,7 @@
         <div class="row">
             <div class="col l6 s12">
                 <h5 class="white-text">Задайте вопрос</h5>
-                <form class="col s12" action="/" method="post" id="contactForm">
+                <form class="col s12" action="" method="post" id="contactForm">
                     <div class="row">
                         <div class="input-field col s6">
                             <i class="mdi-account-circle prefix white-text"></i>
@@ -192,7 +192,7 @@
                 <ul>
                     <li><span class="white-text">IT Bursa<br>Украина, г.Харьков</span>
                     </li>
-                    <li><a href="mailto:support@android-kiosk.com" class="white-text"
+                    <li><a href="mailto:itbursa100@gmail.com" class="white-text"
                            style="">itbursa100@gmail.com </a></li>
                     <li><span class="white-text" style="">Tel: +38(077)1234578</span></li>
                    </ul>
@@ -201,7 +201,7 @@
     </div>
     <div class="footer-copyright">
         <div class="container">
-            <span class="white-text">© 2015 <a href="" class="white-text">IT Bursa</a></span>
+            <span class="white-text">© 2015 <a href="http://itbursa.com/" class="white-text">IT Bursa</a></span>
         </div>
     </div>
 </footer>
