--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
 {% load staticfiles %}
-
 <!DOCTYPE html>
 <!-- saved from url=(0054)http://getbootstrap.com/examples/sticky-footer-navbar/ -->
 <html lang="en">
@@ -38,11 +37,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'index' %}"><img class="logo" alt="PyBursa" src="{% static 'images/Other-python.ico' %}"></a>
+          <a href="{% url 'index' %}"><img class="logo" alt="PyBursa" src="{% static 'images/Other-python.ico' %}"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Главная</a></li>
+            <li><a href="{% url 'index' %}">Главная</a></li>
             <li><a href="{% url 'contact' %}">Контакты</a></li>
             <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
             <!-- <li><a href="{% url 'results' %}">Equation</a></li> -->
@@ -56,7 +55,7 @@
       <div class="page-header">
         <h1>Технополис</h1>
       </div>
-      <p class="text-justify">Цель проекта — готовить квалифицированных веб-разработчиков и системных архитекторов.
+      <p>Цель проекта — готовить квалифицированных веб-разработчиков и системных архитекторов.
         Широкий спектр тем — от базовых, таких как алгоритмы и структуры данных, до тонкостей разработки приложений для мобильных платформ.
       Такие проекты, как Technopolis, важны и для рынка в целом, и в первую очередь — для самих студентов. У молодых специалистов должна быть возможность общаться с экспертами отрасли, пробовать свои силы в реальных проектах, иметь перед глазами вдохновляющие примеры. Мы стремимся создавать площадки для этого: проводим конференции для it-разработчиков, организуем крупнейшую в стране олимпиаду для программистов Technopolis Cup и другие международные чемпионаты.</p>
       <br>
@@ -73,26 +72,26 @@
           <tbody>
             {% for course in courses %}
               <tr>
-                <td class="text-left"><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td>
+                <td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td>
                 <td>{{ course.short_description }}</td>
-                <tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <br>
-        <footer class="footer">
-          <div class="container">
-            <p class="text-muted">san '2015. All rights reserved.</p>
-          </div>
-        </footer>
-        <!-- Bootstrap core JavaScript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="{% static 'js/jquery.min.js' %}"></script>
-        <script src="{% static 'js/bootstrap.js' %}"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
-      </body>
-    </html>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <br>
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">san '2015. All rights reserved.</p>
+      </div>
+    </footer>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+  </body>
+</html>
