--- a/templates/index.html
+++ b/templates/index.html
@@ -221,7 +221,29 @@
 			</div> <!-- /.row -->
 		</div> <!-- /.container -->
 	</section> <!-- /.fun -->
+{% if courses_list %}
+        <!-- Table -->
+        <table class="table table-striped table-bordered">
+        <thead>
+        <tr>
+        <th>Course Name</th>
+        <th>Course Short Description</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for course in courses_list %}
+        <tr>
+        <td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td>
+        <td>{{ course.short_description }}</td>
+        </tr>
+        {% endfor %}
+        </tbody>
+        </table>
 
+      {% else %}
+        <p>No courses are available.</p>
+      {% endif %}
+    </div>
 
 <!-- Footer -->
 	<footer>
