--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -24,12 +24,12 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header navbar-brand">
-          <a href="{% url 'course' %}">
+          <a href="{% url 'index' %}">
             <img class="logo" alt="logo" src="{% static 'images/logo_itbursa.png' %}">
           </a>
         </div>
           <ul class="nav nav-pills">
-            <li role="presentation" class="active"><a href="{% url 'course' %}">Главная</a></li>
+            <li role="presentation" class="active"><a href="{% url 'index' %}">Главная</a></li>
             <li role="presentation" class="passive"><a href="{% url 'contact' %}">Контакты</a></li>
             <li role="presentation" class="passive"><a href="{% url 'students:list_view'%}">Студенты</a></li>
           </ul>
