--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,9 +21,9 @@
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li ><a href="{% url 'index' %}">Main</a></li>
+                            <li ><a href="{% url 'courses:index' %}">Main</a></li>
                             <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-                            <li ><a href="{% url 'student_list' %}">Students</a></li>
+                            <li ><a href="{% url 'students:list_view' %}">Students</a></li>
                         </ul>
                         <p class="navbar-text navbar-right top_mass">Signed in as <a href="#" class="navbar-link">Mark Otto</a></p>
                         <a href="#"  class="top_mass">Inbox <span class="badge">42</span></a>
