--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -4,11 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
-    <title>Linux_Bursa - Student list</title>
+    <title>Linux_Bursa - Courses</title>
     {% load staticfiles %}
-
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" type="text/css">
@@ -40,8 +37,8 @@
                     <li>
                         <a class="page-scroll" a href="{% url 'contact' %}">Contacts</a>
                     </li>
-                    <li class="active">
-                      <a href="{% url 'students:list_view' %}">Students<span class="sr-only">(current)</span></a>
+                    <li>
+                      <a href="{% url 'students:list_view' %}?course_id={{ course_detail.id }}">Students</a>
                     </li>
                 </ul>
             </div>
@@ -53,62 +50,41 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h2>Students:</h2>
+              <div class="slash-div">
+              <h2> {{ course_detail.name }} </h2>
+              {{ course_detail.description }}
+              <br>
+              <h3> Course detailed plan (lessons): </h3>
+              <br>
+
                 <div class="table-responsive">
-        <table class="table table-bordered">
-            <thead>
-              <tr class="success">
-                <td><font color = "000000">No</font></td>
-                <td><font color = "000000">Surname</font></td>
-                <td><font color = "000000">Name</font></td>
-                <td><font color = "000000">Adress</font></td>
-                <td><font color = "000000">Skype</font></td>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td><a href="{% url 'student_detail' %}">01</a></td>
-                <td>Intern1</td>
-                <td>q</td>
-                <td>Adress1</td>
-                <td>Intern1</td>
-              </tr>
-              <tr>
-                <td>02</td>
-                <td>Intern2</td>
-                <td>q</td>
-                <td>Adress2</td>
-                <td>Intern2</td>
-              </tr>
-              <tr>
-                <td>03</td>
-                <td>Intern3</td>
-                <td>q</td>
-                <td>Adress3</td>
-                <td>Intern3</td>
-              </tr>
-              <tr>
-                <td>04</td>
-                <td>Intern4</td>
-                <td>q</td>
-                <td>Adress4</td>
-                <td>Intern4</td>
-              </tr>
-              <tr>
-                <td>05</td>
-                <td>Intern5</td>
-                <td>q</td>
-                <td>Adress5</td>
-                <td>Intern5</td>
-              </tr>
-            </tbody>
-        </table>
-      </div>
-    </div>
+                  <table class="table table-hover">
+                      <thead>
+                        <tr class="success">
+                          <td><strong>ID</strong></td>
+                          <td><strong>Subject</strong></td>
+                          <td><strong>Description</strong></td>
+                        </tr>
+                      </thead>
+                      <tbody>
+                       {% if lessons_list %}
+                        {% for lesson in lessons_list %}
+                        <tr>
+                          <td>{{ lesson.order }} </td>
+                          <td>{{ lesson.subject }}</td>
+                          <td>{{ lesson.description }}</td>
+                        </tr>
+                        {% endfor %}
+                        {% endif %}
+                      </tbody>
+                     </table>
+                </div>
+
+              </div>
             </div>
         </div>
     </header>
-       <!-- jQuery -->
+    <!-- jQuery -->
     <script src="../static/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
