--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
 
     <title>Linux_Bursa - Contacts</title>
     {% load staticfiles %}
@@ -40,7 +40,7 @@
                         <a class="page-scroll" a href="{% url 'contact' %}">Contacts</a>
                     </li>
                     <li>
-                      <a class="page-scroll" a href="{% url 'student_list' %}">Students</a>
+                      <a href="{% url 'students:list_view' %}">Students</a>
                     </li>
                 </ul>
             </div>
@@ -49,7 +49,7 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header> 
+    <header>
         <div class="header-content">
             <div class="header-content-inner">
                 <h2>Contacts:</h2>
