--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-{% load staticfiles %}
 <!DOCTYPE html>
 <!-- saved from url=(0054)http://getbootstrap.com/examples/sticky-footer-navbar/ -->
 <html lang="en">
@@ -11,20 +10,17 @@
     <meta name="description" content="Practical excercise">
     <meta name="author" content="Sergey Podlipenskiy">
     <link rel="icon" href="{% static 'images/Other-python.ico' %}">
+
     <title>PyBursa: Main page</title>
+
+    {% load staticfiles %}
+
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="{% static 'css/sticky-footer-navbar.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="{% static 'js/ie8-responsive-file-warning.js' %}"></script><![endif]-->
-    <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
   </head>
   <body>
     <!-- Fixed navbar -->
@@ -44,7 +40,6 @@
             <li><a href="{% url 'index' %}">Главная</a></li>
             <li><a href="{% url 'contact' %}">Контакты</a></li>
             <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
-            <!-- <li><a href="{% url 'results' %}">Equation</a></li> -->
           </ul>
         </div>
         <!--/.nav-collapse -->
@@ -65,8 +60,8 @@
         <table class="table table-bordered table-condensed">
           <thead>
             <tr>
-              <th class="text-center">Курс</th>
-              <th class="text-center">Описание</th>
+              <th>Курс</th>
+              <th>Описание</th>
             </tr>
           </thead>
           <tbody>
@@ -91,7 +86,5 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.js' %}"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
   </body>
 </html>
