--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -57,7 +57,7 @@
                   <div class="panel-body">
                     <table class="table table-bordered">
                           <th>дата рождения</th>
-                          <td>{{ student.date_of_birth|date:"N d, Y" }}</td>
+                          <td>{{ student.date_of_birth }}</td>
                         </tr>
                         <tr>
                           <th>адрес</th>
