--- a/students/templates/students/list_view.html
+++ b/students/templates/students/list_view.html
@@ -54,7 +54,7 @@
         <tr class="table_head dark_grey_row">
 
           <td>#</td>
-          <td>Surnme Name</td>
+          <td>Surname Name</td>
           <td>Address</td>
           <td>Skype</td>
           <td>Courses</td>
