--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -16,7 +16,6 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#"></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
@@ -24,8 +23,6 @@
             <li><a href="{% url 'contact' %}">Contacts</a></li>
             <li ><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Students</a></li>
           </ul>
-            <p class="navbar-text navbar-right top_mass">Signed in as <a href="#" class="navbar-link">Mark Otto</a></p>
-            <a href="#"  class="top_mass">Inbox <span class="badge">42</span></a>
 
         </div>
       </div>
@@ -47,12 +44,14 @@
         <h3>Courses Lessons Plane</h3>
          <table class="table opct-img">
             <tr class="dark">
+                <th>#</th>
                 <th>Them</th>
                 <th>Description</th>
             </tr>
             {% for lesson in lessons_list %}
                 <tr>
-                    <td><b>{{ lesson}}</b></td>
+                    <td>{{ lesson.id}}</td>
+                    <td><b>{{ lesson.subject }}</b></td>
                     <td>{{ lesson.description }}</td>
                 </tr>
             {% endfor %}
