--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -17,16 +17,13 @@
             <nav class="navbar navbar-inverse">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="#"></a>
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                            <li ><a href="{% url 'courses:index' %}">Main</a></li>
                             <li ><a href="{% url 'contact' %}">Contacts</a></li>
-                            <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
+                            <li class="active"><a href="{% url 'students:list_view' %}">Students</a></li>
                         </ul>
-                        <p class="navbar-text navbar-right top_mass">Signed in as <a href="#" class="navbar-link">Mark Otto</a></p>
-                        <a href="#" class="top_mass" style="">Inbox <span class="badge">42</span></a>
                     </div>
                 </div>
             </nav>
