--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,43 +1,27 @@
-<html>
-<body>
-				<div class="col-lg-12">
-					<h4>Квадратное уравнение a*x*x + b*x + c = 0</h4>
-					<ul>
-				        <li> a = {{ a }}</li>
-				        {% if a_type == 'string' and a == '' %} 
-				        	<p>коэффициент не определен</p>
-				        {% elif a_type == 'string' and a != '' %} 
-				        	<p>коэффициент не целое число</p>
-				        {% elif a_type == 'integer' and a == 0 %}  
-				        	<p>коэффициент при первом слагаемом уравнения не может быть равным нулю</p>
-				        {% endif %}
+<h1> Quadratic </h1>
+<div> Calculating ax<sup>2</sup> + bx + c = 0</div>
+<br>
+a = {{ a }} <br>
+{{ a_error }} <br>
+b = {{ b }} <br>
+{{ b_error }} <br>
+c = {{ c }} <br>
+{{ c_error }} <br>
+<br>
+{% if calculate %}
+    {% if D > 0 %}
+        Дискриминант: {{ D }}<br>
+        Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}<br>        
+    {% elif D == 0 %}
+        Дискриминант: {{ D }} <br>
+        Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }} <br>
+    {% elif D < 0 %}
+        Дискриминант: {{ D }} <br>
+        Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений. <br>
+<br>
+        P.S.  А на самом деле решение есть: <br>
+        x<sub>1</sub> = {{ x1 }} <br>
+        x<sub>2</sub> = {{ x2 }} <br>                
+    {% endif %}
+{% endif %}
 
-				        <li> b = {{ b }}</li>
-				        {% if b_type == 'string' and b == '' %} 
-				        	<p>коэффициент не определен</p>
-				        {% elif b_type == 'string' and b != '' %} 
-				        	<p>коэффициент не целое число</p>
-				        {% endif %}
-
-				        <li> c = {{ c }}</li>
-				        {% if c_type == 'string' and c == '' %} 
-				        	<p>коэффициент не определен</p>
-				        {% elif c_type == 'string' and c != '' %} 
-				        	<p>коэффициент не целое число</p>
-				        {% endif %}
-				    </ul>
-
-				    {% if disrcim != '' %}
-				        <h4>Дискриминант: {{ disrcim }}</h4>
-				        {% if disrcim > 0 %}
-				            <h5>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</h5>
-				        {% elif disrcim == 0 %}
-				            <h5>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }}</h5>
-				        {% elif disrcim < 0 %}
-				            <h5>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</h5>
-				        {% endif %}
-				    {% endif %}
-					
-				</div>
-		
-</body>
