--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -34,5 +34,35 @@
             </tr>
             {% endfor %}
         </table>
+    <h2>Преподаватели</h2>
+    {% for coach in coaches %}
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Учитель</h3>
+            </div>
+            <div class="panel-body">
+                <h4><a href="{% url 'coaches:detail' coach.id %}">{{ coach.name }} {{ coach.surname }}</a></h4>
+                {{ coach.description }}
+            </div>
+        </div>
+    {% endfor %}
+    {% for assistant in assistants %}
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Ассистент</h3>
+            </div>
+            <div class="panel-body">
+                <h4><a href="{% url 'coaches:detail' assistant.id %}">{{ assistant.name }} {{ assistant.surname }}</a></h4>
+                {{ assistant.description }}
+            </div>
+        </div>
+    {% endfor %}
+
+
+
+
+
+
+    </div>
 </body>
 </html>
