--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,5 +1,4 @@
 {% load staticfiles %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Main Page</title>
+    <title>Bursa</title>
     <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
@@ -31,16 +30,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-
-                <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static "images/logo.jpg" alt="img" %}"></a>
+                <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static "images/logo.jpg" %}" alt="img" ></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    {# <li class="active"><a href="{% url 'index' %}">Main</a></li> #}
-                    <li class="active"><a href="{% url 'index' %}">Main</a></li>
+
+                    <li><a href="{% url 'index' %}">Main</a></li>
                     <li><a href="{% url 'contact' %}">Contacts</a></li>
-                    <li><a href="{% url 'students:list_view' %}">Students</a></li>
+                    <li><a href="{% url 'students:list_view' %}?course_id={{courses.id}}">Students</a></li>
                     <li><a href="{% url 'results' %}">Equation</a></li>
                 </ul>
             </div>
@@ -52,24 +50,25 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="well">
-                    <h1>Bursa</h1>
-                    <p>Данное направление позволяет освоить одну из самых популярных специальностей в IT-индустрии – программист. Немаловажным фактором является то, что слушателям предоставляется возможность ознакомиться с разными направлениями в программировании и выбрать для себя наиболее подходящий вариант. В программу курса включаются все аспекты программирования – начиная от основ алгоритмизации и заканчивая новейшими инструментариями используемыми в современной индустрии. Также в курс включаются предметы выходящие за рамки программирования, где слушатели знакомятся с основами проектирования, построением сложных систем и управлением программными проектами.</p>
+                    <h1>{{ courses }}</h1>
+                    <p>{{ courses.description }}</p>
                 </div>
-
-                <h2>Program</h2>
+                <h2>Program about {{ courses }}</h2>
                 <table class="table table-striped table-hover">
                     <thead>
                         <tr>
-                            <th>Курс</th>
+                            <th>#</th>
+                            <th>Тема</th>
                             <th>Описание</th>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for course in courses %}
-                            <tr>
-                                <td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td>
-                                <td>{{ course.short_description }}</td>
-                            </tr>
+                        {% for lesson in lessons %}
+                        <tr>
+                            <td>{{ lesson.order }}</td>
+                            <td>{{ lesson.subject }}</td>
+                            <td>{{ lesson.description }}</td>
+                        </tr>
                         {% endfor %}
                     </tbody>
                 </table>
