--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+</head>
+<body>
 <h1>{{ question.question_text }}</h1>
 
 <ul>
@@ -7,3 +14,5 @@
 </ul>
 
 <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+</body>
+</html>
