--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -7,47 +7,48 @@
 <body>
 
 
-<h1>Квадратное уравнение ax^2 + bx + c = 0</h1>
+<h1>Квадратное уравнение a*x*x + b*x + c = 0</h1>
 
-<ul>
-    <li>
-        a = {{ a }}
-        {% if error_a %}
         <ul>
             <li>
-                {{ error_a }}
+                a = {{ a }}
+                {% if error_a %}
+                    <ul>
+                        <li>
+                            {{ error_a }}
+                        </li>
+                    </ul>
+                {% endif %}
             </li>
-        </ul>
-        {% endif %}
-    </li>
-    <li>
-        b = {{ b }}
-        {% if error_b %}
-        <ul>
             <li>
-                {{ error_b }}
+                b = {{ b }}
+                {% if error_b %}
+                    <ul>
+                        <li>
+                            {{ error_b }}
+                        </li>
+                    </ul>
+                {% endif %}
             </li>
-        </ul>
-        {% endif %}
-    </li>
-    <li>
-        c = {{ c }}
-        {% if error_c %}
-        <ul>
             <li>
-                {{ error_c }}
+                c = {{ c }}
+                {% if error_c %}
+                    <ul>
+                        <li>
+                            {{ error_c }}
+                        </li>
+                    </ul>
+                {% endif %}
             </li>
         </ul>
-        {% endif %}
-    </li>
-</ul>
 
 
-{% if discr or discr == 0%}
-<h3>Дискриминант: {{ discr }}</h3>
+
+{% if discr or discr == 0 %}
+    <h3>Дискриминант: {{ discr }}</h3>
 {% endif %}
 {% if result %}
-<p>{{ result }}</p>
+    <p>{{ result }}</p>
 {% endif %}
 
 
