--- a/templates/index.html
+++ b/templates/index.html
@@ -1,45 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Main</title>
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../static/images/favicon.ico">
     {% load staticfiles %}
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}" />
+
+    <!-- Bootstrap core CSS -->
+ <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}" />
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
-  </head>
-  <body class="sl-background">
-    <!-- menu start -->  
-    <nav class="navbar-fixed-top navbar-inverse">
+
+  <title>Профессиональные Python; Django  курсы</title>
+
+</head>
+
+<body>
+  <div class="container">
+  <!-- Static navbar -->
+    <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="{% url 'index' %}">
-            <img class="sl-brand" alt="GodsBursa" src="{% static 'images/gb-logo.jpg' %}">
-          </a>
+          <p class="navbar-brand">PyBursa</p>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Main<span class="sr-only">(current)</span></a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'student_list' %}">Students</a></li>
-          </ul>
-        </div>
-      </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+		<li><a href="{% url 'index' %}">Main</a></li>
+                <li><a href="{% url 'contact' %}">Contacts</a></li>
+                <li><a href="{% url 'student_list' %}">Students</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
     </nav>
-    <!-- menu end -->  
-    <div class="slash-div">
-    <h2>God's Bursa<br><small>just the best courses in entire Universe</small></h2>
-      <div style="container">
-        Welcome to God's Bursa, lucky man! In our cource we will teach you code like a God (or try to do it). Good luck !<br>
-        On our cources you have possibility to learn many useful things.<br><br>
-        So please make your choise:<br>
-      </div>  
-        <br>
-      <div class="table-responsive">
-        <table class="table table-hover table-bordered">
-            <thead>
+    <div class="panel panel-default">
+      <div class="mystl">
+        <h1>PyBursa Description</h1>
+      </div>
+    </div>
+
+    <div class="jumbotron">
+      <div class="container">
+
+      </div>
+            <p> В этом курсе мы сместили акцент в сторону практики.
+            Будет умеренное количество теории - максимум практики.
+            Примерное соотношение теории и практики: 30% на 70%
+            Курсы будут проходить с 19 октября по 28 декабря.
+            Практические занятия в аудитории + онлайн лекции.</p>
+
+      <div class="panel panel-default">
+        <div class="mystl">
+            <div class="list-group">
+              <div  class="list-group-item active">
+                <h4 class="list-group-item-heading">
+                    Запишись на курсы Python
+                    Попади в тренд современной
+                    WEB разработки</h4>
+              </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+  <!-- Default panel contents -->
+          <div class="panel-heading"><h3>Program:</h3></div>
+            <table class="table">
+               <tbody>
+
+ <thead>
               <tr class="success">
                 <td><strong>Course</strong></td>
                 <td><strong>Short description</strong></td>
@@ -56,16 +87,49 @@
               {% endif %}  
             </tbody>
            </table>
-        </div>
 
-        </div>    
-    </div>
-    </div>
-    </div>
-    <div class="navbar-fixed-bottom row-fluid">
-      <div class="panel-footer sl-footer">&copy; Stalker inc., 2015+</div>
-    </div>
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
+<!--                    <tr>
+
+                      <th>
+                        Курс
+                      </th>
+                      <th>
+                        Описание
+                      </th>
+                      
+                    </tr>
+                    <tr>
+                      <td class="number_cell">
+                        1
+                      </td>
+                      <td>
+                        Основы Python
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="number_cell">
+                        2
+                      </td>
+                      <td>
+                        Строки и итераторы
+                      </td>
+                      
+                    </tr>
+                    <tr>
+                      <td class="number_cell">
+                        3
+                      </td>
+                      <td>
+                        Функции и модульность
+                      </td>
+-->                      
+                    </tbody>
+            </table>
+          </div>
+        </div>
+      <script src="{% static 'js/bootstrap.js' %}"></script>
+  </div>
+</div>
+
+</body>
 </html>
