--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -34,11 +34,38 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-
+    
 		<div class="jumbotron container">
 			<h1>Детали курса {{my_course.name}}</h1>
 			<p class='simple'>{{my_course.description}}</p>
 		</div>
+    {% if my_course.coach or my_course.assistant %}
+      <div class="container" id='id1'>
+        <h2>Преподаватели</h2>
+        {% if my_course.coach %}
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Учитель</h3>
+            </div>
+            <div class="panel-body">
+              <p><a href="{% url 'coaches:detail' my_course.coach.id %}">{{my_course.coach.first_name}} {{my_course.coach.last_name}}</a></p>
+              <p>{{my_course.coach.description}}</p>
+            </div>
+          </div>
+          {% if my_course.assistant %}
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Ассистент</h3>
+              </div>
+              <div class="panel-body">
+                <p><a href="{% url 'coaches:detail' my_course.assistant.id %}">{{my_course.assistant.first_name}} {{my_course.assistant.last_name}}</a></p>
+                <p>{{my_course.assistant.description}}</p>
+              </div>
+            </div>
+          {% endif %}
+        {% endif %}
+      </div>
+    {% endif %}
     <div class="container">
         <div id='id1'>
         <h3 class='center'>План курса</h3>
