--- a/templates/contact_rip.html
+++ b/templates/contact_rip.html
@@ -11,7 +11,7 @@
 			<meta http-equiv="X-UA-Compatible" content="IE=edge">
 			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
-		<title>Padafa Evgeniy</title>
+		<title>Contacts</title>
 
 		<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
 	    <link rel="stylesheet" href="{% static "css/section.css" %}">
@@ -48,7 +48,7 @@
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="{% url "index" %}">Main</a></li>
-						<li><a href="{% url "contact" %}">Contacts</a></li>
+						<li class="active"><a href="{% url "contact" %}">Contacts</a></li>
 						<li><a href="{% url "student_list" %}">Students</a></li>
 					</ul> <!-- /.nav -->
 			    </div><!-- /.navbar-collapse -->
@@ -62,7 +62,7 @@
 		<div class="container">
 			<ol class="breadcrumb">
 				<li><a href="{% url "index" %}">Main</a></li>
-				<li class="active">&nbsp;Padafa Evgeniy</li>
+				<li class="active">&nbsp;Contacts</li>
 			</ol>
 		</div> <!-- /.container -->
 	</section> <!-- /.section-background -->
@@ -72,127 +72,75 @@
 	<section class="team">
 		<div class="container section-wrapper">
 			<h2 class="section-title black">
-				Padafa Evgeniy
+				our team
 			</h2> <!-- /.section-title -->
 			<div class="underline purple"></div>
 			<div class="row">
 				<div class="col-sm-3 col-xs-6">
 					<div class="team-item">
-						<img src="{% static "images/ava-padafa.jpg" %}" alt="team-image" class="team-img">
+						<img src="{% static "images/team-1.png" %}" alt="team-image" class="team-img">
+						<h4 class="team-item-name">
+							Founder
+						</h4>
+						<ul class="team-item-name-2">
+							<li>Name: David Martin</li>
+							<li>Skype: <i>klaster22</i></li>
+							<li>Email: klaster@freeletter.me</li>
+							<li>Phone: 8-800-555-35-35</li>
+						</ul>
 					</div> <!-- /.team-item -->
 				</div> <!-- /.col-md-3 -->
-			</div> <!-- /.team-item -->
-		</div> <!-- /.col-md-3 -->
+
+				<div class="col-sm-3 col-xs-6">
+					<div class="team-item">
+						<img src="{% static "images/team-2.png" %}" alt="team-image" class="team-img">
+						<h4 class="team-item-name">
+							Manager
+						</h4>
+						<ul class="team-item-name-2">
+							<li>Name: Lena Scott</li>
+							<li>Skype: <i>lavanda09</i></li>
+							<li>Email: lavanda@freeletter.me</li>
+							<li>Phone: 8-800-555-35-36</li>
+						</ul>
+					</div> <!-- /.team-item -->
+				</div> <!-- /.col-md-3 -->
+				<div class="col-sm-3 col-xs-6">
+					<div class="team-item">
+						<img src="{% static "images/team-3.png" %}" alt="team-image" class="team-img">
+						<h4 class="team-item-name">
+							Director
+						</h4>
+						<ul class="team-item-name-2">
+							<li>Name: Paul Smith</li>
+							<li>Skype: <i>paul.smt</i></li>
+							<li>Email: paul@freeletter.me</li>
+							<li>Phone: 8-800-556-35-36</li>
+						</ul>
+					</div> <!-- /.team-item -->
+				</div> <!-- /.col-md-3 -->
+				<div class="col-sm-3 col-xs-6">
+					<div class="team-item">
+						<img src="{% static "images/team-4.png" %}" alt="team-image" class="team-img">
+						<h4 class="team-item-name">
+							Co-Founder
+						</h4>
+						<ul class="team-item-name-2">
+							<li>Name: Jenifer White</li>
+							<li>Skype: <i>jen.w</i></li>
+							<li>Email: jen.white@freeletter.me</li>
+							<li>Phone: 8-800-555-30-36</li>
+						</ul>
+					</div> <!-- /.team-item -->
+				</div> <!-- /.col-md-3 -->
+				
+				
+			</div> <!-- /.row -->
+		</div> <!-- /.container -->
 	</section> <!-- /.team -->
 
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading">Student's card</div>
-  <div class="panel-body">
-  </div>
 
 
-      <!-- Table -->
-      <table class="table table-bordered">
-      <tbody>
-      <tr>
-      <td>Surname</td>
-      <td>{{ student.surname }}</td>
-      </tr>
-      <tr>
-      <td>Name</td>
-      <td>{{ student.name }}</td>
-      </tr>
-      <td>Birth Date</td>
-      <td>{{ student.date_of_birth }}</td>
-      </tr>
-      <tr>
-      <td>Address</td>
-      <td>{{ student.address }}</td>
-      </tr>
-      <tr>
-      <td>E-mail</td>
-      <td>{{ student.email }}</td>
-      </tr>
-      <tr>
-      <td>Skype</td>
-      <td>{{ student.skype }}</td>
-      </tr>
-      <tr>
-      <td>Phone</td>
-      <td>{{ student.phone }}</td>
-      </tr>
-      </tbody>
-      </table>
-
-
-  <!-- Table -->
-  <table class="table">
-    <tr>
-    	<td>Surname</td>
-    	<td>Padafa</td>
-    </tr>
-    <tr>
-    	<td>Name</td>
-    	<td>Evgeniy</td>
-    </tr>
-    <tr>
-    	<td>Patronymic</td>
-    	<td>Dmitrievich</td>
-    </tr>
-    <tr>
-    	<td>Birth Date</td>
-    	<td>18.11.1994</td>
-    </tr>
-    <tr>
-    	<td>Address</td>
-    	<td>Kosiora</td>
-    </tr>
-    <tr>
-    	<td>E-mail</td>
-    	<td>padafaevgeniy@gmail.com</td>
-    </tr>
-    <tr>
-    	<td>Skype</td>
-    	<td>makaron19941</td>
-    </tr>
-      	<td>Average Grade</td>
-      	<td>4.8</td>
-    </tr>
-    <tr>
-      	<td>Rating</td>
-   		<td>35</td>
-    </tr>
-  </table>
-</div>
-
-  <!-- Default panel contents -->
-  <!-- Table -->
-      <table class="table table-striped table-bordered">
-      <thead>
-      <tr>
-      <th>Theme</th>
-      <th>Week Number</th>
-      <th>Control Type</th>
-      <th>Problem Task Number</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-      <td>Python for Beginners</td>
-      <td>1</td>
-      <td>Practice Lesson</td>
-      <td>Problem Task #2</td>
-      </tr>
-      <tr>
-      <td>Handling Exceptions</td>
-      <td>2</td>
-      <td>Tests</td>
-      <td>Problem Task #1</td>
-      </tr>
-      </tbody>
-      </table>
-    </div>
 <!-- Footer -->
 	<footer>
 		<div class="container">
