--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,154 +1,157 @@
-{% load staticfiles %}
 <!DOCTYPE html>
-<!--[if IE 7 ]><html class="ie ie7 lte9 lte8 lte7" lang="en-US"><![endif]-->
-<!--[if IE 8]><html class="ie ie8 lte9 lte8" lang="en-US">	<![endif]-->
-<!--[if IE 9]><html class="ie ie9 lte9" lang="en-US"><![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!-->
-<html class="noIE" lang="en-US">
-<!--<![endif]-->
-	<head>
-		<!-- meta -->
-			<meta http-equiv="X-UA-Compatible" content="IE=edge">
-			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-			<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
-		<title>Unique title</title>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Students</title>
+    {% load staticfiles %}
+  </head>
+    <body class="sl-background">
+    <!-- menu start -->  
+        <nav class="navbar-fixed-top navbar-inverse">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="{% url 'index' %}">
+                <img class="sl-brand" alt="GodsBursa" src="../static/images/gb-logo.jpg">
+              </a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li><a href="{% url 'index' %}">Main</a></li>
+                <li><a href="{% url 'contact' %}">Contacts</a></li>
+                <li class="active"><a href="{% url 'students:list_view' %}">Students<span class="sr-only">(current)</span></a></li>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+    <!-- menu end -->  
+    <!-- main students-list -->  
+    <div class="slash-div">
+    <h2> Lorem ipsum dolor sit amet. <br><small> Lorem ipsum dolor sit amet.</small></h2>
+    <div class="table-responsive">
+        <table class="table table-hover table-bordered">
+            <thead>
+              <tr class="success">
+                <td><strong>No</strong></td>
+                <td><strong>Surname</strong></td>
+                <td><strong>Name</strong></td>
+                <td><strong>Address</strong></td>
+                <td><strong>Skype</strong></td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="{% url 'student_detail' %}">01</a></td>
+                <td>Hartsock</td>
+                <td>William T.</td>
+                <td>327 Pallet Street, New York, NY 10007 </td>
+                <td>WilliamTHartsock</td>                
+              </tr>
+              <tr>
+                <td>02</td>
+                <td>Christensen</td>
+                <td>Irene R.</td>
+                <td>3627 Harrison Street, San Francisco, CA 94143 </td>
+                <td>Hande1976</td>                
+              </tr>
+              <tr>
+                <td>03</td>
+                <td>Brown</td>
+                <td>Caroline</td>
+                <td>3868 Doe Meadow Drive, Silver Spring, MD 20910 </td>
+                <td>Loo6iekob2</td>                
+              </tr>
+              <tr>
+                <td>04</td>
+                <td>Fleming</td>
+                <td>David C.</td>
+                <td>1264 Newton Street, Ogilvie, MN 56358 </td>
+                <td>DavidCFleming</td>                
+              </tr>
+              <tr>
+                <td>05</td>
+                <td>Smith</td>
+                <td>Ryan J.</td>
+                <td>670 Saint Marys Avenue, East Syracuse, NY 13057 </td>
+                <td>RyanJSmith</td>                
+              </tr>
+              <tr>
+                <td>06</td>
+                <td>Baeza</td>
+                <td>Wilbur G.</td>
+                <td>4975 Hillcrest Drive, Tukwila, WA 98168 </td>
+                <td>Joill1956</td>                
+              </tr>
+              <tr>
+                <td>07</td>
+                <td>Warburton</td>
+                <td>Alvin J.</td>
+                <td>3353 Dogwood Road, Gilbert, AZ 85233 </td>
+                <td>Wayed1990</td>                
+              </tr>
+               <tr>
+                <td>08</td>
+                <td>Novello</td>
+                <td>Ellen R.</td>
+                <td>3556 Mudlick Road, Leavenworth, WA 98826</td>
+                <td>Hented</td>                
+              </tr>
+              <tr>
+                <td>09</td>
+                <td>Sarn</td>
+                <td>To'Ka</td>
+                <td>2013 County Line Road, Tampa, FL 33602 </td>
+                <td>ToKaSarn</td>                
+              </tr>
+              <tr>
+                <td>10</td>
+                <td>Pallara</td>
+                <td>Kandel</td>
+                <td>2398 Post Avenue, Wadena, MN 56482</td>
+                <td>Ressay</td>                
+              </tr>
+              <tr>
+                <td>11</td>
+                <td>Brandybuck</td>
+                <td>Malva</td>
+                <td>3441 Lindale Avenue, San Francisco, CA 94108</td>
+                <td>Squity40</td>                
+              </tr>
+              <tr>
+                <td>12</td>
+                <td>Zaragamba</td>
+                <td>Ponto</td>
+                <td>734 John Calvin Drive, Chicago, IL 60606 </td>
+                <td>Everchist</td>                
+              </tr>
+              <tr>
+                <td>13</td>
+                <td>Brockhouse</td>
+                <td>Hending</td>
+                <td>30 Capitol Avenue, Indianapolis, IN 46254</td>
+                <td>HendingBrockhouse</td>                
+              </tr>
+              <tr>
+                <td>14</td>
+                <td>Chubb-Baggins</td>
+                <td>Rose</td>
+                <td>1341 Tator Patch Road, Chicago, IL 60605</td>
+                <td>Alitill</td>                
+              </tr>
+              <tr>
+                <td>15</td>
+                <td>Chubb</td>
+                <td>Gorbadoc</td>
+                <td>818 Willow Oaks Lane, Lafayette, LA 70506</td>
+                <td>GorbadocChubb</td>                
+              </tr>
+            </tbody>
+        </table>
+      </div>
+    </div>
+    <!-- end of students-list --> 
 
-		<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
-	    <link rel="stylesheet" href="{% static "css/section.css" %}">
-	    <link rel="stylesheet" href="{% static "css/service.css" %}">
-
-	    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-			<!--[if lt IE 9]>
-				<script src="assets/js/html5shiv.js"></script>
-				<script src="assets/js/respond.js"></script>
-			<![endif]-->
-
-			<!--[if IE 8]>
-		    	<script src="assets/js/selectivizr.js"></script>
-		    <![endif]-->
-	</head>
-
-<body>
-
-<!-- Home -->
-	<section class="portfolio-header" id="header">
-		
-		<nav class="navbar navbar-default _navbar-fixed-top">
-			<div class="container">
-			<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="{% url "index" %}">PyBursa</a>
-				</div> <!-- /.navbar-header -->
-
-		    <!-- Collect the nav links, forms, and other content for toggling -->
-			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="{% url "index" %}">Main</a></li>
-						<li><a href="{% url "contact" %}">Contacts</a></li>
-						<li class="active"><a href="{% url "student_list" %}">Students</a></li>
-
-					</ul> <!-- /.nav -->
-			    </div><!-- /.navbar-collapse -->
-		  	</div><!-- /.container -->
-		</nav>
-	</section> <!-- /#header -->
-
-
-<!-- Section Background -->
-	<section class="section-background">
-		<div class="container">
-			<ol class="breadcrumb">
-				<li><a href="{% url "index" %}">Main</a></li>
-				<li class="active">&nbsp;Students</li>
-			</ol>
-		</div> <!-- /.container -->
-	</section> <!-- /.section-background -->
-
-<div>
-	<section class="price-table">
-		<div class="container section-wrapper">
-		<div>
-			<h1 class="section-title black">Py-Django Bursa Students</h1>
-			<p>Text</p> <!-- /.section-title -->
-		</div>
-		<div class="panel panel-default">
-		<div class="panel-heading">Students List</div>
-
-  <!-- Table -->
-  <table class="table">
-    <tr>
-    	<td>No</td>
-    	<td>Surname</td>
-    	<td>Name</td>
-    	<td>Address</td>
-    	<td>Skype</td>
-    </tr>
-    <tr>
-    	<td><a href="{% url "student_detail" %}">1</a></td>
-    	<td>Padafa</td>
-    	<td>Evgeniy</td>
-    	<td>Ukraine, Dnipropetrovsk, yl. Stolek 1</td>
-    	<td>makaron19941</td>
-    </tr>
-        <tr>
-    	<td>2</td>
-    	<td>Padafa</td>
-    	<td>Evgeniy</td>
-    	<td>Ukraine, Dnipropetrovsk, yl. Stolek 1</td>
-    	<td>makaron19941</td>
-    </tr>
-        <tr>
-    	<td>3</td>
-    	<td>Padafa</td>
-    	<td>Evgeniy</td>
-    	<td>Ukraine, Dnipropetrovsk, yl. Stolek 1</td>
-    	<td>makaron19941</td>
-    </tr>
-        <tr>
-    	<td>4</td>
-    	<td>Padafa</td>
-    	<td>Evgeniy</td>
-    	<td>Ukraine, Dnipropetrovsk, yl. Stolek 1</td>
-    	<td>makaron19941</td>
-    </tr>
-        <tr>
-    	<td>5</td>
-    	<td>Padafa</td>
-    	<td>Evgeniy</td>
-    	<td>Ukraine, Dnipropetrovsk, yl. Stolek 1</td>
-    	<td>makaron19941</td>
-    </tr>
-  </table>
-</div>
-</div>
-</section>
-</div>
-<!-- Footer -->
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-4">
-					<div class="copy">
-						Copyright &copy; 2015 Padafa Evgeniy
-					</div>
-				</div>
-			</div> <!-- /.row -->
-		</div> <!-- /.container -->
-	</footer>
-	
-
-
-	<script src="{% static "js/jquery-1.11.2.min.js" %}"></script>
-    <script src="{% static "js/bootstrap.min.js" %}"></script>
-    <script src="{% static "js/contact.js" %}"></script>
-	<script src="{% static "js/script.js" %}"></script>
-
-
-</body>
+  </body>
 </html>
