--- a/templates/student_list_rip.html
+++ b/templates/student_list_rip.html
@@ -11,11 +11,11 @@
 			<meta http-equiv="X-UA-Compatible" content="IE=edge">
 			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
-		<title>Padafa Evgeniy</title>
+		<title>Unique title</title>
 
 		<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
 	    <link rel="stylesheet" href="{% static "css/section.css" %}">
-	    <link rel="stylesheet" href="{% static "css/about.css" %}">
+	    <link rel="stylesheet" href="{% static "css/service.css" %}">
 
 	    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 			<!--[if lt IE 9]>
@@ -27,11 +27,13 @@
 		    	<script src="assets/js/selectivizr.js"></script>
 		    <![endif]-->
 	</head>
+
 <body>
+
 <!-- Home -->
 	<section class="portfolio-header" id="header">
 		
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default _navbar-fixed-top">
 			<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
@@ -49,7 +51,8 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="{% url "index" %}">Main</a></li>
 						<li><a href="{% url "contact" %}">Contacts</a></li>
-						<li><a href="{% url "student_list" %}">Students</a></li>
+						<li class="active"><a href="{% url "student_list" %}">Students</a></li>
+
 					</ul> <!-- /.nav -->
 			    </div><!-- /.navbar-collapse -->
 		  	</div><!-- /.container -->
@@ -62,128 +65,70 @@
 		<div class="container">
 			<ol class="breadcrumb">
 				<li><a href="{% url "index" %}">Main</a></li>
-				<li class="active">&nbsp;Padafa Evgeniy</li>
+				<li class="active">&nbsp;Students</li>
 			</ol>
 		</div> <!-- /.container -->
 	</section> <!-- /.section-background -->
 
-
-<!-- Our Team -->
-	<section class="team">
+<div>
+	<section class="price-table">
 		<div class="container section-wrapper">
-			<h2 class="section-title black">
-				Padafa Evgeniy
-			</h2> <!-- /.section-title -->
-			<div class="underline purple"></div>
-			<div class="row">
-				<div class="col-sm-3 col-xs-6">
-					<div class="team-item">
-						<img src="{% static "images/ava-padafa.jpg" %}" alt="team-image" class="team-img">
-					</div> <!-- /.team-item -->
-				</div> <!-- /.col-md-3 -->
-			</div> <!-- /.team-item -->
-		</div> <!-- /.col-md-3 -->
-	</section> <!-- /.team -->
-
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading">Student's card</div>
-  <div class="panel-body">
-  </div>
-
-
-      <!-- Table -->
-      <table class="table table-striped table-bordered">
-      <thead>
-      <tr>
-      <th>No</th>
-      <th>Name and Surname</th>
-      <th>Address</th>
-      <th>Skype</th>
-      </tr>
-      </thead>
-      <tbody>
-      {% for student in students_list %}
-        <tr>
-        <td>{{ student.id }}</td>
-        <td><a href="{% url 'students:detail' student.id %}">{{ student.name }} {{ student.surname }}</a></td>
-        <td>{{ student.surname }}</td>
-        <td>{{ student.address }}</td>
-        <td>{{ student.skype }}</td>
-        </tr>
-      {% endfor %}
-      </tbody>
-      </table>
-    </div>
-
+		<div>
+			<h1 class="section-title black">Py-Django Bursa Students</h1>
+			<p>Text</p> <!-- /.section-title -->
+		</div>
+		<div class="panel panel-default">
+		<div class="panel-heading">Students List</div>
 
   <!-- Table -->
   <table class="table">
     <tr>
+    	<td>No</td>
     	<td>Surname</td>
-    	<td>Padafa</td>
-    </tr>
-    <tr>
     	<td>Name</td>
-    	<td>Evgeniy</td>
-    </tr>
-    <tr>
-    	<td>Patronymic</td>
-    	<td>Dmitrievich</td>
-    </tr>
-    <tr>
-    	<td>Birth Date</td>
-    	<td>18.11.1994</td>
-    </tr>
-    <tr>
     	<td>Address</td>
-    	<td>Kosiora</td>
-    </tr>
-    <tr>
-    	<td>E-mail</td>
-    	<td>padafaevgeniy@gmail.com</td>
-    </tr>
-    <tr>
     	<td>Skype</td>
+    </tr>
+    <tr>
+    	<td><a href="{% url "student_detail" %}">1</a></td>
+    	<td>Padafa</td>
+    	<td>Evgeniy</td>
+    	<td>Ukraine, Dnipropetrovsk, yl. Stolek 1</td>
     	<td>makaron19941</td>
     </tr>
-      	<td>Average Grade</td>
-      	<td>4.8</td>
+        <tr>
+    	<td>2</td>
+    	<td>Padafa</td>
+    	<td>Evgeniy</td>
+    	<td>Ukraine, Dnipropetrovsk, yl. Stolek 1</td>
+    	<td>makaron19941</td>
     </tr>
-    <tr>
-      	<td>Rating</td>
-   		<td>35</td>
+        <tr>
+    	<td>3</td>
+    	<td>Padafa</td>
+    	<td>Evgeniy</td>
+    	<td>Ukraine, Dnipropetrovsk, yl. Stolek 1</td>
+    	<td>makaron19941</td>
+    </tr>
+        <tr>
+    	<td>4</td>
+    	<td>Padafa</td>
+    	<td>Evgeniy</td>
+    	<td>Ukraine, Dnipropetrovsk, yl. Stolek 1</td>
+    	<td>makaron19941</td>
+    </tr>
+        <tr>
+    	<td>5</td>
+    	<td>Padafa</td>
+    	<td>Evgeniy</td>
+    	<td>Ukraine, Dnipropetrovsk, yl. Stolek 1</td>
+    	<td>makaron19941</td>
     </tr>
   </table>
 </div>
-
-  <!-- Default panel contents -->
-  <!-- Table -->
-      <table class="table table-striped table-bordered">
-      <thead>
-      <tr>
-      <th>Theme</th>
-      <th>Week Number</th>
-      <th>Control Type</th>
-      <th>Problem Task Number</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-      <td>Python for Beginners</td>
-      <td>1</td>
-      <td>Practice Lesson</td>
-      <td>Problem Task #2</td>
-      </tr>
-      <tr>
-      <td>Handling Exceptions</td>
-      <td>2</td>
-      <td>Tests</td>
-      <td>Problem Task #1</td>
-      </tr>
-      </tbody>
-      </table>
-    </div>
+</div>
+</section>
+</div>
 <!-- Footer -->
 	<footer>
 		<div class="container">
@@ -193,7 +138,6 @@
 						Copyright &copy; 2015 Padafa Evgeniy
 					</div>
 				</div>
-				
 			</div> <!-- /.row -->
 		</div> <!-- /.container -->
 	</footer>
