--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -12,7 +12,7 @@
       <div>
         <div>
           <a href="{% url 'index' %}">
-            <img  alt="GodsBursa" src="{% static 'images/gb-logo.jpg' %}">
+            <img>
           </a>
         </div>
         <div  id="bs-example-navbar-collapse-1">
