--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -13,7 +13,7 @@
       <div >
         <div >
           <a  href="{% url 'index' %}">
-            <img  src="{% static 'images/gb-logo.jpg' %}">
+            <img>
           </a>
         </div>
         <div  id="bs-example-navbar-collapse-1">
