--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -15,7 +15,7 @@
             <img>
           </a>
         </div>
-        <div  id="bs-example-navbar-collapse-1">
+        <div>
           <ul>
             <li><a href="{% url 'index' %}">Main</a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
