--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -13,10 +13,10 @@
       <div >
         <div >
           <a  href="{% url 'index' %}">
-            <img>
+            py
           </a>
         </div>
-        <div  id="bs-example-navbar-collapse-1">
+        <div>
           <ul >
             <li><a href="{% url 'index' %}">Main</a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
