--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,19 +7,19 @@
     <title>Contacts</title>
     {% load staticfiles %}
   </head>
-    <body class="sl-background">
+    <body>
     <!-- menu start -->  
-        <nav class="navbar-fixed-top navbar-inverse">
-          <div class="container-fluid">
-            <div class="navbar-header">
-              <a class="navbar-brand" href="{% url 'index' %}">
-                <img class="sl-brand" alt="GodsBursa" src="../static/images/gb-logo.jpg">
+        <nav>
+          <div>
+            <div>
+              <a href="{% url 'index' %}">
+                py
               </a>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav">
+            <div>
+              <ul>
                 <li><a href="{% url 'index' %}">Main</a></li>
-                <li class="active"><a href="{% url 'contact' %}">Contacts<span class="sr-only">(current)</span></a></li>
+                <li><a href="{% url 'contact' %}">Contacts<span>(current)</span></a></li>
                 <li><a href="{% url 'students:list_view' %}">Students</a></li>
               </ul>
             </div>
@@ -27,17 +27,17 @@
         </nav>
     <!-- menu end -->  
     <!-- main contact -->  
-    <div class="slash-div">
-      <div class="container" align="center"> 
-       <div class="media">
-          <div class="media-left">
+    <div >
+      <div align="center"> 
+       <div>
+          <div>
             <a href="#">
-              <img class="media-object" src="{% static 'images/founder-ph.jpg' %}" alt="Tony Stark">
+              py
             </a>
           </div>
-          <div class="media-body">
-            <h4 class="media-heading sl-h4-contacts">Director</h4>
-              <div class="sl-contacts">
+          <div>
+            <h4 >Director</h4>
+              <div>
                 Name:   Krek<br>
                 Skype:  krek<br>
                 Email:  krek@google.com<br>
@@ -46,34 +46,31 @@
           </div>
         </div>
         <!-- main contact end + splitter -->  
-        <div class="progress">
-          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-          </div>
-        </div>
+
         <!-- other contacts --> 
-        <div class="media">
-          <div class="media-left">
+        <div>
+          <div>
             <a href="#">
-              <img class="img-circle" src="{% static 'images/director-ph.jpg' %}" alt="Thor">
+              py
             </a>
           </div>
-          <div class="media-body">
-            <h4 class="media-heading sl-h4-contacts">Founder</h4>
-            <div class="sl-contacts">
+          <div>
+            <h4>Founder</h4>
+            <div >
             Name:   Djek<br>
             Skype:  byms<br>
             Email:  byms@box.me<br>
             Phone:  0000-333-4444<br>
             </div>
           </div>
-          <div class="media-left">
+          <div >
             <a href="#">
-              <img class="img-circle" src="{% static 'images/manager-ph.jpg' %}" alt="Hulk">
+              py
             </a>
           </div>
-          <div class="media-body">
-            <h4 class="media-heading sl-h4-contacts">Manager</h4>
-            <div class="sl-contacts">
+          <div>
+            <h4 >Manager</h4>
+            <div >
             Name:   Kek<br>
             Skype:  Cake<br>
             Email:  freeletter@freeletter.me<br>
