--- a/templates/index.html
+++ b/templates/index.html
@@ -7,18 +7,18 @@
     <title>Main</title>
     {% load staticfiles %}
   </head>
-  <body class="sl-background">
+  <body >
     <!-- menu start -->  
-    <nav class="navbar-fixed-top navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="{% url 'index' %}">
-            <img class="sl-brand" alt="GodsBursa" src="{% static 'images/gb-logo.jpg' %}">
+    <nav >
+      <div>
+        <div>
+          <a  href="{% url 'index' %}">
+            py
           </a>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Main<span class="sr-only">(current)</span></a></li>
+        <div >
+          <ul >
+            <li><a href="{% url 'index' %}">Main</span></a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
             <li><a href="{% url 'students:list_view' %}">Students</a></li>
           </ul>
@@ -26,18 +26,18 @@
       </div>
     </nav>
     <!-- menu end -->  
-    <div class="slash-div">
-    <h2>God's Bursa<br><small>just the best courses in entire Universe</small></h2>
-      <div style="container">
+    <div >
+    <h2>Lorem ipsum.<br><small>Lorem ipsum dolor sit amet.</small></h2>
+      <div >
         Lorem ipsum dolor sit amet.<br>
         Lorem ipsum dolor sit amet.<br><br>
         Lorem ipsum dolor.<br>
       </div>  
         <br>
-      <div class="table-responsive">
-        <table class="table table-hover table-bordered">
+      <div >
+        <table >
             <thead>
-              <tr class="success">
+              <tr >
                 <td><strong>Course</strong></td>
                 <td><strong>Short description</strong></td>
               </tr>
